--- a/galeria.html
+++ b/galeria.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="container navbar">
-            <a href="main.html">
-                <img class="logo" src="./logo.png" alt="Logo Motyl" loading="lazy">
+            <a href="index.html">
+                <img class="logo" src="./images/logo.png" alt="Logo Motyl" loading="lazy">
             </a>
             <div class="menu">
                 <div class="btn">
@@ -58,10 +58,10 @@
 
         <div class="container">
             <div class="gallery-position">
-                <img src="./zdj1.jpg" alt="Proces twórczy" loading="lazy">
-                <img src="./zdj2.jpg" alt="Proces twórczy" loading="lazy">
-                <img src="./zdj3.jpg" alt="Proces twórczy" loading="lazy">
-                <img src="./zdj4.jpg" alt="Proces twórczy" loading="lazy">
+                <img src="./images/zdj1.jpg" alt="Proces twórczy" loading="lazy">
+                <img src="./images/zdj2.jpg" alt="Proces twórczy" loading="lazy">
+                <img src="./images/zdj3.jpg" alt="Proces twórczy" loading="lazy">
+                <img src="./images/zdj4.jpg" alt="Proces twórczy" loading="lazy">
             </div>
         </div>
     </section>
@@ -79,10 +79,10 @@
 
     <div class="container">
         <div class="gallery-position">
-            <img src="./zdj11.jpg" alt="Bukiet kwiatów" loading="lazy">
-            <img src="./zdj22.jpg" alt="Bukiet kwiatów" loading="lazy">
-            <img src="./zdj33.jpg" alt="Bukiet kwiatów" loading="lazy">
-            <img src="./zdj44.jpg" alt="Bukiet kwiatów" loading="lazy">
+            <img src="./images/zdj11.jpg" alt="Bukiet kwiatów" loading="lazy">
+            <img src="./images/zdj22.jpg" alt="Bukiet kwiatów" loading="lazy">
+            <img src="./images/zdj33.jpg" alt="Bukiet kwiatów" loading="lazy">
+            <img src="./images/zdj44.jpg" alt="Bukiet kwiatów" loading="lazy">
         </div>
     </div>
 
@@ -91,7 +91,7 @@
             <div class="footer-contact">
                 <div class="footer-about">
                     <div class="logo-footer">
-                        <img src="./logo-footer.png" alt="Logo stopka" loading="lazy">
+                        <img src="./images/logo-footer.png" alt="Logo stopka" loading="lazy">
                     </div>
                     <p>Pracownia florystyczna MOTYL jest firmą rodzinną. Została otwarta w 1970 roku i działa do
                         dnia
@@ -162,3 +162,6 @@
             </div>
         </div>
     </div>
+</body>
+
+</html>
