--- a/kontakt.html
+++ b/kontakt.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="container navbar">
-            <a href="main.html">
-                <img class="logo" src="./logo.png" alt="Logo Motyl" loading="lazy">
+            <a href="index.html">
+                <img class="logo" src="./images/logo.png" alt="Logo Motyl" loading="lazy">
             </a>
             <div class="menu">
                 <div class="btn">
@@ -54,7 +54,7 @@
     </section>
 
     <div class="container">
-        <form action="odbior.php" method="POST">
+        <form>
             <div class="form-contact">
                 <div class="data">
                     <label for="fname">Imię</label>
@@ -167,7 +167,7 @@
             <div class="footer-contact">
                 <div class="footer-about">
                     <div class="logo-footer">
-                        <img src="./logo-footer.png" alt="Logo stopka" loading="lazy">
+                        <img src="./images/logo-footer.png" alt="Logo stopka" loading="lazy">
                     </div>
                     <p>Pracownia florystyczna MOTYL jest firmą rodzinną. Została otwarta w 1970 roku i działa do
                         dnia
@@ -238,3 +238,6 @@
             </div>
         </div>
     </div>
+</body>
+
+</html>
