--- a/o-nas.html
+++ b/o-nas.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="container navbar">
-            <a href="main.html">
-                <img class="logo" src="./logo.png" alt="Logo Motyl" loading="lazy">
+            <a href="index.html">
+                <img class="logo" src="./images/logo.png" alt="Logo Motyl" loading="lazy">
             </a>
             <div class="menu">
                 <div class="btn">
@@ -57,7 +57,7 @@
         </div>
 
         <div class="container">
-            <img src="./img1-about.jpg" alt="Kwiaciarnia" loading="lazy" class="flower-shop">
+            <img src="./images/img1-about.jpg" alt="Kwiaciarnia" loading="lazy" class="flower-shop">
         </div>
     </section>
 
@@ -70,12 +70,12 @@
         <div class="container">
             <div class="team">
                 <div class="employee">
-                    <img src="./anna.jpg" alt="Pracownik" loading="lazy">
+                    <img src="./images/anna.jpg" alt="Pracownik" loading="lazy">
                     <div class="name">Anna Goździk</div>
                     <p class="position">Właścicielka kwiaciarni Motyl i florystka</p>
                 </div>
                 <div class="employee">
-                    <img src="./monika.jpg" alt="Pracownik" loading="lazy">
+                    <img src="./images/monika.jpg" alt="Pracownik" loading="lazy">
                     <div class="name">Monika Tulipan</div>
                     <p class="position">Florystka</p>
                 </div>
@@ -88,7 +88,7 @@
             <div class="footer-contact">
                 <div class="footer-about">
                     <div class="logo-footer">
-                        <img src="./logo-footer.png" alt="Logo stopka" loading="lazy">
+                        <img src="./images/logo-footer.png" alt="Logo stopka" loading="lazy">
                     </div>
                     <p>Pracownia florystyczna MOTYL jest firmą rodzinną. Została otwarta w 1970 roku i działa do
                         dnia
@@ -159,3 +159,6 @@
             </div>
         </div>
     </div>
+</body>
+
+</html>
