--- a/uslugi.html
+++ b/uslugi.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="container navbar">
-            <a href="main.html">
-                <img class="logo" src="./logo.png" alt="Logo Motyl" loading="lazy">
+            <a href="index.html">
+                <img class="logo" src="./images/logo.png" alt="Logo Motyl" loading="lazy">
             </a>
             <div class="menu">
                 <div class="btn">
@@ -50,7 +50,8 @@
         <div class="container">
             <h2>Nasze kompozycje</h2>
             <hr>
-            <p class="space">W ofercie naszej kwiaciarni znajdują się klasyczne bukiety ze świeżych kwiatów dostępnych cały rok – z
+            <p class="space">W ofercie naszej kwiaciarni znajdują się klasyczne bukiety ze świeżych kwiatów dostępnych
+                cały rok – z
                 róż, goździków, gerber, anturium, margerytek i alstromerii. Komponujemy bukiety na różne okazje: na
                 imieniny, urodziny, rocznice i święta, takie jak Dzień Babci, Dzień Mamy czy Dzień Ojca. Proponujemy
                 kwiaty, które uświetnią zaręczyny, inne romantyczne okazje oraz śluby. Tworzymy także wieńce pogrzebowe.
@@ -59,7 +60,7 @@
 
         <div class="container">
             <div class="panel">
-                <img src="./services1.jpg" alt="Kompozycja kwiatowa" loading="lazy">
+                <img src="./images/services1.jpg" alt="Kompozycja kwiatowa" loading="lazy">
                 <div class="panel-description">
                     <p class="panel-short">Kompozycja ślubna</p>
                     <p>Kwiaty to jeden z najważniejszych elementów dekoracji sali weselnej, kościoła czy domu panny
@@ -68,7 +69,7 @@
                 </div>
             </div>
             <div class="panel">
-                <img src="./services2.jpg" alt="Kompozycja kwiatowa" loading="lazy">
+                <img src="./images/services2.jpg" alt="Kompozycja kwiatowa" loading="lazy">
                 <div class="panel-description">
                     <p class="panel-short">Kompozycja komunijna</p>
                     <p>Przyjęcia z okazji Pierwszej Komunii Świętej z pewnością są ważnym i wyjątkowym dniem. Kompozycje
@@ -76,7 +77,7 @@
                 </div>
             </div>
             <div class="panel">
-                <img src="./services3.jpg" alt="Kompozycja kwiatowa" loading="lazy">
+                <img src="./images/services3.jpg" alt="Kompozycja kwiatowa" loading="lazy">
                 <div class="panel-description">
                     <p class="panel-short">Wiązanki pogrzebowe</p>
                     <p>Aby uczcić pamięć bliskiej osoby i warto wybrać z myślą o niej eleganckie, piękne kwiaty.
@@ -91,7 +92,7 @@
             <div class="footer-contact">
                 <div class="footer-about">
                     <div class="logo-footer">
-                        <img src="./logo-footer.png" alt="Logo stopka" loading="lazy">
+                        <img src="./images/logo-footer.png" alt="Logo stopka" loading="lazy">
                     </div>
                     <p>Pracownia florystyczna MOTYL jest firmą rodzinną. Została otwarta w 1970 roku i działa do
                         dnia
@@ -162,3 +163,6 @@
             </div>
         </div>
     </div>
+</body>
+
+</html>
