--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="container navbar">
-            <a href="main.html">
-                <img class="logo" src="./logo.png" alt="Logo Motyl" loading="lazy">
+            <a href="index.html">
+                <img class="logo" src="./images/logo.png" alt="Logo Motyl" loading="lazy">
             </a>
             <div class="menu">
                 <div class="btn">
@@ -54,7 +54,7 @@
 
         <div class="container">
             <div class="panel">
-                <img src="./about.jpg" alt="Kwiaciarnia" loading="lazy">
+                <img src="./images/about.jpg" alt="Kwiaciarnia" loading="lazy">
                 <div class="panel-description">
                     <p class="panel-short">Inspirację czerpiemy z otaczającej przyrody, ponieważ tworzymy sztukę w
                         harmonii z naturą.
@@ -81,12 +81,12 @@
 
         <div class="container">
             <div class="flowers">
-                <img src="./img1.jpg" alt="Bukiet kwiatów" loading="lazy">
-                <img src="./img2.jpg" alt="Bukiet kwiatów" loading="lazy">
-                <img src="./img4.jpg" alt="Bukiet kwiatów" loading="lazy">
-                <img src="./img3.jpg" alt="Bukiet kwiatów" loading="lazy">
-                <img src="./img5.jpg" alt="Bukiet kwiatów" loading="lazy">
-                <img src="./img6.jpg" alt="Bukiet kwiatów" loading="lazy">
+                <img src="./images/img1.jpg" alt="Bukiet kwiatów" loading="lazy">
+                <img src="./images/img2.jpg" alt="Bukiet kwiatów" loading="lazy">
+                <img src="./images/img4.jpg" alt="Bukiet kwiatów" loading="lazy">
+                <img src="./images/img3.jpg" alt="Bukiet kwiatów" loading="lazy">
+                <img src="./images/img5.jpg" alt="Bukiet kwiatów" loading="lazy">
+                <img src="./images/img6.jpg" alt="Bukiet kwiatów" loading="lazy">
             </div>
         </div>
     </section>
@@ -96,7 +96,7 @@
             <div class="footer-contact">
                 <div class="footer-about">
                     <div class="logo-footer">
-                        <img src="./logo-footer.png" alt="Logo stopka" loading="lazy">
+                        <img src="./images/logo-footer.png" alt="Logo stopka" loading="lazy">
                     </div>
                     <p>Pracownia florystyczna MOTYL jest firmą rodzinną. Została otwarta w 1970 roku i działa do
                         dnia
@@ -167,3 +167,7 @@
             </div>
         </div>
     </div>
+    
+</body>
+
+</html>
